[project]
name = "gymnasium-learn"
version = "0.1.0"
description = "Learn Reinforcement Learning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ale-py>=0.11.2",
    "autorom[accept-rom-license]>=0.6.1",
    "gymnasium>=1.2.1",
    "matplotlib>=3.10.7",
    "stable-baselines3[extra]>=2.7.0",
    "tqdm>=4.67.1",
]
